css/style.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    color: #555;
    line-height: 1.5;
    min-height: 100vh;
}

.top-header {
    display: none;
}

.lower-header {
    display: none;
}

.mobile-nav {
    width: 100%;
    height: 50px;
}

.left-anchors {
    float: left;
    width: 30%;
    background-color: red;
    height: inherit;
}
.mobile-nav img {
    width: 100px;
    margin-top: 15px;
    margin-left: 20px;
}

.right-anchors {
    float: right;
    width: 70%;
    height: inherit;
}

.mobile-nav .right-anchors a {
    float: right;
}

.butt,
.butt1 {
    width: 49px;
    height: 49px;
}

.mobile-nav,
.butt {
    border: 1px solid rgb(221, 216, 216);
}

.fa-search,
.fa-bars {
    position: relative;
    top: 15px;
    margin: 0 auto;
    left: 15px;
    
}

.fa-search {
    color: rgb(185, 178, 178);;
}

.fa-bars {
    color: rgb(255, 167, 4);
}

h2,
h5 {
    color: #fff;
    padding-left: 10px;
    padding-right: 10px;
}
h3 {
    padding: 0;
    margin: 0;
    color: #fff;
}

.main-container{
    display: grid;
    grid-template-columns: 1fr;
    grid-gap: 5px;
    width: 98%;
    margin: 0 auto;
    margin-top: 10px;
}

.main-art-top,
.main-art-middle,
.main-art-bottom {
    height: 240px;
    width: auto;
}

.main-background-img,
.middle-background-img,
.bottom-background-img {
    position: absolute;
    background-size: cover;
    height: inherit;
    width: 98%;
    background-repeat: no-repeat;
}

.main-background-img {
    background-image: url('https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/07/header-image-iphone-screen-sizes-plotted-796x417.png');
}

.middle-background-img {
    background-image: url('https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/07/woman-in-grey-shirt-holding-brown-cardboard-box-761999-796x448.jpg');
}

.bottom-background-img {
    background-image: url('https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/07/2-6-796x417.jpg');
}

.main-background-gradient,
.middle-background-gradient,
.bottom-background-gradient{
z-index: 4;
}

.main-logo,
.middle-logo,
.bottom-logo {
    z-index: 5;
}

.main-header,
.middle-header,
.bottom-header {
    position: relative;
    top: 160px;
    z-index: 3;
    width: 100%;
    height: auto;
}

.main-header h2,
.middle-header h2,
.bottom-header h2 {
    font-size: 100%;
}

.main-header ul,
.middle-header ul,
.bottom-header ul {
    display: flex;
}

.main-header ul li,
.middle-header ul li,
.bottom-header ul li {
 list-style-type: none;
 margin-right: 20px;
}

.main-header ul li a,
.middle-header ul li a,
.bottom-header ul li a {
    text-decoration: none;
    color: #aaa;
    padding-left: 10px;
    padding-right: 10px;
}

.latest-news {
    display: grid;
    grid-template-columns: 1fr ;
    grid-gap: 5px;
    width: 95%;
    margin: 0 auto;
}

.latest-news-items {
    height: 90px;
    margin: 5px;
    display: flex;
    flex-direction: row;
}

.latest-news-items-image,
.funder-image {
    width: 80px;
    margin: 3px;
    height: 80px;
    background-size: cover;
    background-repeat: no-repeat;
    background-position: 50% 50%;
}

.img-bg-a {
    background-image: url('https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/07/Untitled-design-95-516x270.png');
}

.img-bg-b {
    background-image: url('https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/07/Luminar-4-Bundle-540x270.jpeg');
}

.img-bg-c {
    background-image: url('https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/07/Evercable-540x270.png');
}

.img-bg-d {
    background-image: url('https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/07/Copy-of-Copy-of-Copy-of-Copy-of-Copy-of-Copy-of-...-13-516x270.png');
}

.img-bg-e {
    background-image: url('https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/07/OnePlus-Nord-514x270.jpg');
}

.img-bg-f {
    background-image: url('https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/07/Copy-of-Copy-of-Copy-of-Copy-of-Copy-of-Copy-of-...-12-516x270.png');
}

.img-bg-g {
    background-image: url('https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/07/teslamoon-480x270.jpg');
}

.img-bg-h {
    background-image: url('https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/07/header-image-ios-clipboard-copying-516x270.png');
}

.latest-news-items-text {
    width: 80%;
    margin: 3px;
    height: 80px;
}

.latest-fund-article,
.featured-post-container {
    width: 95%;
    margin-left: 15px;
    margin-bottom: 20px;
    border: 1px solid yellow;
}

.latest-fund {
    width: inherit;
    height: 40px;
    margin-bottom: 10px;
    margin-left: -10px;
}

.latest-fund-nav {
    width: 100%;
}

.latest-fund-nav ul li {
    width: 100%;
    margin-bottom: 4px;
    list-style-type: none;
}

.latest-fund-nav ul li a {
    text-decoration: none;
    color: #ff4422;
}

.funders {
    width: 95%;
    height: auto;
    margin-bottom: 40px;
    margin-left: 15px;
}

.funders header {
    height: 60px;
    background-color: #ff4422;
    width: 100%;
}

.funders header h3 {
    padding-top: 10px;
    padding-left: 100px;
}

.funder-image {
    position: relative;
    top: -45px;
    left: 10px;
    max-width: 15%;
    z-index: 2;
}

.funders-text {
    padding-left: 100px;
    width: 100%;
    height: 80px;
    margin-top: -100px;
    background-color: #ffebe7;
    z-index: 1;
    margin-left: 0;
}

.clear-fix {
    clear: both;
}

.img-bg-i {
    background-image: url('https://img-cdn.tnwcdn.com/image?url=https%3A%2F%2Fpbs.twimg.com%2Fprofile_images%2F1275370217191944194%2FDwCOMQ4r.jpg&signature=d40bc78fd49f3278cd2004db0622ba31');
}

.img-bg-j {
    background-image: url('https://img-cdn.tnwcdn.com/image?url=https%3A%2F%2Fpbs.twimg.com%2Fprofile_images%2F722475461121482753%2Foab7vApG.jpg&signature=a13ddb1d0bde7f3433acbd4536be69ed');
}

.img-bg-k {
    background-image: url('https://img-cdn.tnwcdn.com/image?url=https%3A%2F%2Fpbs.twimg.com%2Fprofile_images%2F1278312382109016066%2FcViOeyTb.png&signature=5b330847991d3472239ee4b486cbd058');
}

.img-bg-l {
    background-image: url('https://img-cdn.tnwcdn.com/image?url=https%3A%2F%2Fpbs.twimg.com%2Fprofile_images%2F1267125502885728258%2Fwzo0WIkh.jpg&signature=107cc0db98a0f3d67f05f983afead2f5');
}

.funders-text-mid p,
.funders-text-bottom p {
   
    width: 100%;
    background-color: inherit;
    margin-left: 40px;
    margin-top: 20px;
}

.funders-text-mid {
    margin-bottom: 15px;
}

.funders-text-bottom {
    border-top: 1px solid rgb(235, 117, 117);
    margin-left: 10px;
}

.funders-hidden {
    display: none;
}

.featured-post-container {
    display: grid;
    grid-template-columns: auto;
    grid-gap: 5px;
    
}

.featured-post {
    height: 200px;
    border: 1px solid grey;
    margin: 5px;
}

.latest-deals {
    display: grid;
    grid-template-columns: auto;
    grid-gap: 5px;
    margin: 0 auto;
    width: 95%;
    height: auto;
}

.latest-deals-post {
    height: 240px;
    margin: 5px;
    border: 1px solid olive;
}

footer {
    width: 95%;
    margin: 0 auto;
}

.partners {
    height: 150px;
    background-color: palegreen;
    border: 1px solid green;
    margin: 0 auto;
    width: 100%;
}

.copyright {
    height: 100px;
    background-color: orchid;
    border: 1px solid green;
    width: 100%;
}



/*-------HERE START THE MEDIA QUERIES----------*/

@media screen and (max-width: 764px) {
    .top-header {
        display: none;
    }
}

@media screen and (min-width: 764px) {
    .main-container {
        grid-template-columns: 2fr 1fr;
        
    }

    .top-header {
        height: 35px;
        background-color: #000;
        display: flex;
        justify-content: space-between;
        width: 100%;
        flex-direction: row;
    }

    .top-header ul li {
        list-style-type: none;
        float: left;
        margin-left: 10px;
        margin-top: 5px;
    }

    .top-header ul li a {
        text-decoration: none;
        color: #aaa;
    }

    .top-header ul li .active {
        color: #fff;
    }

    .top-header ul li a:hover {
        color: #fff;
    }

    .top-left-anchors {
        margin-left: 20px;
        height: inherit;
    }

    .top-right-anchors {
        margin-right: 25px;
        height: inherit;
    }
    
    .lower-header {
        height: 45px;
        display: flex;
    }

    .left-anchors {
        float: left;
        width: 80%;
        height: inherit;
        background-color: inherit;
    }
    
    .right-anchors {
        float: right;
        width: 20%;
        height: inherit;
    }

    .butt {
        border: 1px solid rgb(221, 216, 216);
        width: 50px;
        height: inherit;
        float: right;
    }

    .fa-search {
        position: relative;
        top: 10px;
        margin: 0 auto;
        left: 15px; 
        color: rgb(185, 178, 178);
    }
        
    .lower-header ul li {
        list-style-type: none;
        margin: 3px;
        float: left;
    }
    
    .lower-header ul li a {
        text-decoration: none;
        font-family: 'Abel', sans-serif;
        font-weight: 600;
        text-transform: uppercase;
        color: #aaa;
        display: block;
        height: 48px;
        letter-spacing: .04em;
        line-height: 1;
        padding: 15px 10px 0;
    }

    .lower-header ul li a:hover {
        color: #333;
    }

    .mobile-nav {
        display: none;
    }

    .main-art-top {
        grid-row: 1 / span 2;
        height: 485px;
    }

    .latest-news {
        grid-template-columns: auto auto auto auto;
        grid-template-rows: auto auto auto auto;
    }

    .latest-news-items {
        flex-direction: column;
    }

    .latest-news-items-image {
        width: 98%;
        height: 50%;
    }

    .latest-news-items-text {
        width: 98%;
        height: 50%;
    }

    .latest-fund-article, .funders-container {
        width: 90%;
        border: 1px solid orange;
        margin-bottom: 20px;
        margin: 0 auto;
    }
    
    .latest-fund {
        float:left;
        width: 40%;
        height: 60px;
        background-color: goldenrod;
    }
    
    .latest-fund-nav {
        float: right;
        width: 60%;
    }
    
    .latest-fund-nav ul, .funders-container {
        display: flex;
    }

    .latest-fund-nav li {
        height: 60px;
        background-color: sandybrown;
        list-style-type: none;
    }

    .funders, .funders-hidden {
        width: 100%;
        height: 230px;
        background-color: red;
        margin: 12px;
    }

    .funders-hidden {
        display: inline;
    }

    .featured-post-container {
        grid-template-columns: auto auto auto;
        grid-template-rows: auto auto auto;
    }

    .featured-post {
        height: 500px;
        border: 1px solid grey;
        margin: 5px;
    }

    .latest-deals {
        grid-template-columns: auto auto auto auto;
        grid-template-rows: auto auto auto auto;
    }

}

